--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,9 +6,8 @@
     <div id="slider">
       
       <ul class="rslides">
-        <li><%= image_tag 'teste.jpg', :alt=>"" %></li>
-        <li><%= image_tag 'teste.jpg', :alt=>"" %></li>
-        <li><%= image_tag 'teste.jpg', :alt=>"" %></li>
+        <li><%= image_tag 'dinox.jpg', :alt=>"" %></li>
+        <li><%= image_tag 'dinoxmarca.jpg', :alt=>"" %></li>
       </ul>
     
     </div>    
