--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,6 +27,7 @@ header {
     width: 100%;
     background: #0073AD;
     height: 106px;
+    z-index: 999;
 }
 
 header nav {
@@ -42,7 +43,7 @@ header nav ul {
 header nav ul li{
     display: inline-block;
     text-align: center;
-    margin-left: 20px;
+    margin-left: 9px;
     border: 0px solid;   
     padding-top: 27px;
     height: 87px;
@@ -168,4 +169,82 @@ footer .itemrodape2 p1 {
 
 .selected {
     background: #005782;
+}
+
+span {
+    display: none;
+}
+
+#li_produtos:hover span  {
+    display: block;
+    position: absolute;
+    left: 160px;
+    width: 520px;
+    padding: 5px;
+    margin-left: 470px;
+    margin-top: 15px;
+    z-index: 998;
+    color: #FFF;
+    background: #005782;
+    font-size: 10px;
+    text-align:left;
+}
+
+#li_produtos:hover {
+    background: #005782;
+}
+
+
+header span a {
+    text-decoration: none;
+}
+
+header span {
+    
+}
+
+#nav {
+    width: 520px;
+    display: table;
+}
+
+#ul1  {
+    width: 200px;
+    height: 250px;
+    border-right: 2px solid #0073AD;
+}
+
+#ul2 {    
+    float: right;
+    height: 250px;
+}
+
+#nav ul li {
+    display: block;
+    height: 3px;
+    line-height: 3px; 
+    margin-left: -20px;
+}
+
+#nav ul {
+    margin-top: 10px;
+    width: 215px;
+}
+
+#nav ul li a {
+    float: left;
+    font-family: Arial;
+    font-size: 11pt;
+}
+
+.span {
+    display: none;
+}
+
+.display {
+    display: block;
+}
+
+#li_produtos span a:hover {
+    color: #0073AD;
 }
