--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,7 +86,7 @@
           </li>
 
           <li id="li_contato">
-            <%= image_tag 'contato.png' %> <%= link_to 'Contato', new_site_contact_path, :id => 'li_contato' %>
+            <%= image_tag 'contato.png' %> <%= link_to 'Contato', new_site_contact_path, :remote => :true, :id => 'li_contato' %>
           </li>
 
         </ul>
