--- a/app/assets/stylesheets/contato.css
+++ b/app/assets/stylesheets/contato.css
@@ -13,12 +13,19 @@
 
 #contato img {
     float: right;
+    padding-right: 90px;
+    margin-top: 45px;
+}
+
+#contato p {
+    font-size: 14pt;
 }
 
 .contact_form {
-    margin-top: 60px;
-    width: 410px;
-    
+    margin-top: 45px;
+    width: 550px;
+    padding-left: 25px;
+    text-align: right;
 }
 
 .contact_form .box-dados input{
@@ -27,12 +34,90 @@
     margin-top: 15px;
     width: 180px;
     height: 30px;
-    
+    margin-right: 244px;
+    font-size: 10pt;
+}
+.contact_form .box-dados label {
+    padding-right: 22px;
 }
 
 .contact_form .box-message textArea{
     border: 1px solid #E6E6E6;
     font-size: 14pt;
     height: 140px;
-    width: 410px;
+    width: 422px;
+}
+
+.contact_form .box-message label {
+    float: left;
+}
+
+.contact_form .box-message {
+    margin-top: 20px;
+}
+
+#site_contact_name {
+    width: 425px;
+    margin-right: 0px;
+}
+
+#site_contact_estado {
+    margin-right: 0px;
+    width: 120px;
+}
+
+.site_contact_estado {
+    float: right;
+    width: 245px;
+}
+
+.site_contact_cidade {
+    width: 330px;
+}
+
+#site_contact_cidade {
+    margin-right: 0px;
+}
+
+.submit input{
+    background: #005782;
+    border: none;
+    color: #FFF;
+    width: 82px;
+    height: 33px;
+    margin-top: 25px;
+    font-size: 12pt;
+}
+
+#mapa {
+    border: 1px solid #CCC;
+    width: 955px;
+}
+
+#localizacao {
+    padding-left: 25px;
+    padding-bottom: 70px;
+}
+
+.box-dados select {
+    border: 1px solid #CCC;
+    background: #FFF;
+    height: 30px;
+    margin-top: 15px;
+}
+
+.div-ajax-carregamento-pagina
+{
+    position: absolute;
+    top: 105px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999997;
+    /* transparência compatível com os navegadores comuns.*/
+    opacity:0.65;
+    -moz-opacity: 0.65;
+    filter: alpha(opacity=65);
+    background: black;
+    text-align: center;
 }
