--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,57 +27,57 @@
             <span>
               <nav id="nav">
           
-          <ul id="ul2">
-            <li>
-              <%= link_to '-Esporas' %>
-            </li>
-            
-            <li>
-              <%= link_to '-Abridor de boca(Bovino)' %>
-            </li>
-            
-            <li>
-               <%= link_to '-Cbrestos' %>
-            </li>
-            <li>
-              <%= link_to '-Esporas' %>
-            </li>
-            
-            <li>
-              <%= link_to '-Abridor de boca(Bovino)' %>
-            </li>
-            
-            <li>
-               <%= link_to '-Cbrestos' %>
-            </li>
-          </ul>
-          
-          <ul id="ul1">
-            <li>
-              <%= link_to '-Flambadores a gás' %>
-            </li>
-            
-            <li>
-              <%= link_to '-Mochadores', produtos_home_index_path, :remote=> :true, :id => 'li_produtos' %>
-            </li>
-            
-            <li>
-               <%= link_to '-Marcadores' %>
-            </li>
-            <li>
-              <%= link_to '-Flambadores a gás' %>
-            </li>
-            
-            <li>
-              <%= link_to '-Mochadores' %>
-            </li>
-            
-            <li>
-               <%= link_to '-Marcadores' %>
-            </li>
-          </ul>
-          
-        </nav> 
+                <ul id="ul2">
+                  <li>
+                    <%= link_to '-Esporas' %>
+                  </li>
+
+                  <li>
+                    <%= link_to '-Abridor de boca(Bovino)' %>
+                  </li>
+
+                  <li>
+                     <%= link_to '-Cabrestos' %>
+                  </li>
+                  <li>
+                    <%= link_to '-Esporas' %>
+                  </li>
+
+                  <li>
+                    <%= link_to '-Abridor de boca(Bovino)' %>
+                  </li>
+
+                  <li>
+                     <%= link_to '-Cabrestos' %>
+                  </li>
+                </ul>
+
+                <ul id="ul1">
+                  <li>
+                    <%= link_to '-Flambadores a gás' %>
+                  </li>
+
+                  <li>
+                    <%= link_to '-Mochadores', produtos_home_index_path, :remote=> :true, :id => 'li_produtos' %>
+                  </li>
+
+                  <li>
+                     <%= link_to '-Marcadores' %>
+                  </li>
+                  <li>
+                    <%= link_to '-Flambadores a gás' %>
+                  </li>
+
+                  <li>
+                    <%= link_to '-Mochadores' %>
+                  </li>
+
+                  <li>
+                     <%= link_to '-Marcadores' %>
+                  </li>
+                </ul>
+
+              </nav> 
             </span>
           </li>
           
