--- a/app/views/site/contacts/_new.html.erb
+++ b/app/views/site/contacts/_new.html.erb
@@ -1,4 +1,8 @@
 
+<div class="div-carregamento-pagina"></div> 
+
+<%= image_tag 'loadinfo.gif', :id => 'load' %>
+
 <div class="titulo_paginas">
     <div class="center">
       <p class="txt_titulo_paginas">Contato</p>
@@ -9,14 +13,15 @@
 <div class="conteudo_paginas">
       
   <div class="center">
+   
       <div id="contato">
     
         <p>Preencha os campos abaixo e seja um parceiro de negócios Dinox!</p>
 
-        <%= flash[:notice] %>
+        <div id="flash"><%= flash[:notice] %></div>
 
-        <%= image_tag 'contatoemail.png' %>        
-
+        <%= image_tag 'contatoemail.png' %>
+ 
         <%= render :partial => '/site/contacts/form' %> 
       
       </div>
@@ -35,3 +40,4 @@
       
   </div>
 </div>
+   
