--- a/app/views/site/contacts/new.js.erb
+++ b/app/views/site/contacts/new.js.erb
@@ -1,2 +1,21 @@
 
 $("#yield-box").html('<%= escape_javascript(render(:partial => 'site/contacts/new'))%>');
+
+$('#load').hide();
+
+$('#enviar').click(function() {  
+
+  $(document).ajaxStart(function() {
+      $('.div-carregamento-pagina').addClass('div-ajax-carregamento-pagina');  
+      $('#load').show();
+      
+  });
+  
+  $(document).ajaxStop(function() {
+      $('.div-carregamento-pagina').removeClass('div-ajax-carregamento-pagina'); 
+      $('#load').hide();
+  });
+   
+});
+
+    
