--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -182,25 +182,21 @@ span {
     width: 520px;
     padding: 5px;
     margin-left: 470px;
-    margin-top: 15px;
+    margin-top: 17px;
     z-index: 998;
     color: #FFF;
     background: #005782;
     font-size: 10px;
     text-align:left;
+    list-style: none;
 }
 
 #li_produtos:hover {
     background: #005782;
 }
 
-
 header span a {
     text-decoration: none;
-}
-
-header span {
-    
 }
 
 #nav {
@@ -235,10 +231,6 @@ header span {
     float: left;
     font-family: Arial;
     font-size: 11pt;
-}
-
-.span {
-    display: none;
 }
 
 .display {
