--- a/app/assets/stylesheets/contato.css
+++ b/app/assets/stylesheets/contato.css
@@ -109,15 +109,26 @@
 .div-ajax-carregamento-pagina
 {
     position: absolute;
-    top: 105px;
+    top: 0px;
     left: 0px;
     width: 100%;
-    height: 100%;
+    height: 1290px;
     z-index: 9999997;
     /* transparência compatível com os navegadores comuns.*/
-    opacity:0.65;
-    -moz-opacity: 0.65;
-    filter: alpha(opacity=65);
+    opacity:0.45;
+    -moz-opacity: 0.45;
+    filter: alpha(opacity=45);
     background: black;
     text-align: center;
+}
+
+#load {
+    position: fixed;
+    left:50%;
+    top:50%;
+}
+
+#flash {
+    margin-top: 50px;
+    margin-bottom: -40px;
 }
