--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,7 +82,7 @@
           </li>
           
           <li id="li_parceiro">
-            <%= image_tag 'parceiro.png' %> <%= link_to 'Seja um parceiro', root_path, :id => 'li_parceiro' %>
+            <%= image_tag 'parceiro.png' %> <%= link_to 'Seja um parceiro', new_parceiro_path, :remote => :true, :id => 'li_parceiro' %>
           </li>
 
           <li id="li_contato">
