--- a/app/views/parceiro/parceiro_mailer/new_parceiro.html.erb
+++ b/app/views/parceiro/parceiro_mailer/new_parceiro.html.erb
@@ -6,6 +6,21 @@
 </p>
 
 <p>
+  <b>Rua:</b>
+  <%= @contact.rua %>
+</p>
+
+<p>
+  <b>Número:</b>
+  <%= @contact.numero %>
+</p>
+
+<p>
+  <b>Bairro:</b>
+  <%= @contact.bairro %>
+</p>
+
+<p>
   <b>Cidade:</b>
   <%= @contact.cidade %>
 </p>
@@ -23,6 +38,11 @@
 <p>
   <b>Telefone:</b>
   <%= @contact.telefone%>
+</p>
+
+<p>
+  <b>CPF/CNPJ</b>
+  <%= @contact.cpf_cnpj %>
 </p>
 
 <p>
