--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -182,7 +182,7 @@ span {
     width: 520px;
     padding: 5px;
     margin-left: 470px;
-    margin-top: 17px;
+    margin-top: 15px;
     z-index: 998;
     color: #FFF;
     background: #005782;
@@ -202,17 +202,17 @@ header span a {
 #nav {
     width: 520px;
     display: table;
+    padding-bottom: 20px;
+    padding-top: 35px;
 }
 
 #ul1  {
     width: 200px;
-    height: 250px;
     border-right: 2px solid #0073AD;
 }
 
 #ul2 {    
     float: right;
-    height: 250px;
 }
 
 #nav ul li {
@@ -223,7 +223,6 @@ header span a {
 }
 
 #nav ul {
-    margin-top: 10px;
     width: 215px;
 }
 
@@ -231,6 +230,7 @@ header span a {
     float: left;
     font-family: Arial;
     font-size: 11pt;
+    margin-top: -35px;
 }
 
 .display {
@@ -279,9 +279,16 @@ header span a {
     border: 1px solid;  
   }
 
-a {
-  color: #E6E6E6;
-  background: #E6E6E6;
-  border: 1px solid;
-  text-decoration: none;
-  }
+.rslides1_s1 a {
+    color: #E6E6E6;
+    background: #E6E6E6;
+    border: 1px solid;
+    text-decoration: none;
+}
+  
+.rslides1_s2 a {
+    color: #E6E6E6;
+    background: #E6E6E6;
+    border: 1px solid;
+    text-decoration: none;
+}
