--- a/app/views/parceiro/_new.html.erb
+++ b/app/views/parceiro/_new.html.erb
@@ -9,6 +9,10 @@
     </div>
 </div>
 
+<div class="flash">
+  <%= flash[:notice] %>
+</div> 
+
 <div class="conteudo_paginas">
   <div class="center">
     
@@ -17,7 +21,7 @@
 
         <p>Preencha os campos abaixo e seja um parceiro de negócios Dinox!</p>
 
-        <div id="flash"><%= flash[:notice] %></div> 
+        
 
         <%= image_tag 'sejaparceiro.png' %>
 
