--- a/app/views/site/contacts/_new.html.erb
+++ b/app/views/site/contacts/_new.html.erb
@@ -8,7 +8,8 @@
       <p class="txt_titulo_paginas">Contato</p>
     </div>
 </div>
-  
+
+<div class="flash"><%= flash[:notice] %></div>  
 
 <div class="conteudo_paginas">
       
@@ -17,8 +18,6 @@
       <div id="contato">
     
         <p>Preencha os campos abaixo e seja um parceiro de negócios Dinox!</p>
-
-        <div id="flash"><%= flash[:notice] %></div>
 
         <%= image_tag 'contatoemail.png' %>
  
