--- a/app/views/produto/_mochadores.html.erb
+++ b/app/views/produto/_mochadores.html.erb
@@ -26,6 +26,11 @@
           <p>Mochador Reto-Reto</p>
           <%= image_tag 'mochadores/6.jpg' %>
         </li>
+        
+        <li>
+          <p>Mochador Especial Cabo Duplo</p>
+          <%= image_tag 'mochadores/23.jpg' %>
+        </li>
                         
       </ul>
     </nav>
