--- a/app/views/parceiro/_form.html.erb
+++ b/app/views/parceiro/_form.html.erb
@@ -6,7 +6,7 @@
             <%= f.input :numero, :label=>"N:", :required=>true %>
             <%= f.input :rua, :label=>"Rua:", :required=>true %>
             <%= f.input :bairro, :label=>"Bairro:", :required=>true %>
-            <%= f.input :estado, :label=>"Estado:", collection: ["SP", "RJ"] %>
+            <%= f.input :estado, :label=>"Estado:" %>
             <%= f.input :cidade, :label=>"Cidade:" %>            
             <%= f.input :cep, :label=>"Cep:", :required=> true %>
             <%= f.input :telefone, :label=>"Fone:" %>
