--- a/app/views/produto/_jogonumero.html.erb
+++ b/app/views/produto/_jogonumero.html.erb
@@ -19,20 +19,12 @@
         
         <li>
           <p></p>
-          <%= image_tag 'jogo_numeros/26.jpg' %>
+          <%= image_tag 'jogo_numeros/26.jpg', :class => 'ul_produtos img' %>
         </li>
-                        
+           
       </ul>
     </nav>
     
-    <div id="white_content"><%= image_tag 'jogo_numeros/26.jpg', :class => 'img_selected' %>
-      
-      <div id="fechar">
-        <p>Fechar</p>
-      </div>
     </div>
-    <div id="black_overlay"></div>
     
-        
-  </div>
 </div>
