--- a/app/views/produto/_mochadores.html.erb
+++ b/app/views/produto/_mochadores.html.erb
@@ -19,22 +19,22 @@
         
         <li>
           <p>Mochador Martelo Simples</p>
-          <%= image_tag 'mochadores/4.jpg' %>
+          <%= image_tag 'mochadores/4.jpg', :id => 'mochador01' %>
         </li>
         
         <li>
           <p>Mochador Reto-Reto</p>
-          <%= image_tag 'mochadores/6.jpg' %>
+          <%= image_tag 'mochadores/6.jpg', :id => 'mochador02' %>
         </li>
         
         <li>
           <p>Mochador Especial Cabo Duplo</p>
-          <%= image_tag 'mochadores/23.jpg' %>
+          <%= image_tag 'mochadores/23.jpg', :id => 'mochador03' %>
         </li>
                         
       </ul>
-    </nav>
-    
+    </nav> 
         
   </div>
+  
 </div>
