--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
           </li>
 
           <li id="li_produtos" class="li_pro">
-            <%= image_tag 'produtos.png' %> <%= link_to 'Produtos', new_produto_path(:param => "new"), :remote => :true, :id => 'li_produtos' %>
+            <%= image_tag 'produtos.png' %> <p id="li_produtos">Produtos</p>
           
             <span>
               <nav id="nav">
