--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
             <%= image_tag 'empresa.png' %> <%=  link_to 'A empresa',  empresa_home_index_path, :remote=> :true, :id => 'li_empresa' %>              
           </li>
 
-          <li id="li_produtos" class="li_pro">
+          <li id="li_produtos">
             <%= image_tag 'produtos.png' %> <p id="li_produtos">Produtos</p>
           
             <span>
