--- a/app/views/home/_empresa.html.erb
+++ b/app/views/home/_empresa.html.erb
@@ -9,7 +9,7 @@
   <div class="center">
     <div id="conteudo_empresa">
       
-      <%= image_tag 'imgempresa.png' %>
+      <%= image_tag 'img_empresa.png' %>
       
       <p id="texto_empresa">
         Marcas que fazem História...<br><br>
