--- a/app/views/produto/_jogonumero.html.erb
+++ b/app/views/produto/_jogonumero.html.erb
@@ -11,7 +11,7 @@
     <h3>Jogos de Números</h3>
     
     <p id="texto_produtos">
-       Jogos de números confeccionados em 100% aço inox, classificados em dois modelos: 
+       Jogos de números confeccionados 100% em aço inox, classificados em dois modelos: 
     </p>
     
     <nav id="nav_produtos">
