--- a/app/views/produto/new.js.erb
+++ b/app/views/produto/new.js.erb
@@ -1,5 +1,4 @@
 
 $("#yield-box").html('<%= escape_javascript(render(:partial => 'produto/' + @produto))%>');
 
-
-    
+$('ul#menu li#li_produtos').addClass('selected');  
