--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,7 +93,7 @@
               <div class="txtrodape">
                 <p1>Localização</p1>
                 <p class="txt">
-                  Rua Ari Rosário, 30 - Distrito Industrial 2 Garça - São Paulo - CEP: 17.400-000
+                  Rua Ary Rosário, 10 - Distrito Industrial 2 Garça - São Paulo - CEP: 17.400-000
                 </p>
               </div>
             </div>
