--- a/app/views/produto/_mochadores.html.erb
+++ b/app/views/produto/_mochadores.html.erb
@@ -23,7 +23,7 @@
         </li>
         
         <li>
-          <p>Mochador Reto-Reto</p>
+          <p>Mochador Reto-Concavo</p>
           <%= image_tag 'mochadores/6.jpg', :id => 'mochador02' %>
         </li>
         
