alterações imagens produtos

--- a/app/views/produto/_flambadores.html.erb
+++ b/app/views/produto/_flambadores.html.erb
@@ -38,14 +38,38 @@
         
         <li>
           <p></p>
-          <%= image_tag 'flambadores/20.jpg' %>
+          <%= image_tag 'flambadores/img_1142.JPG' %>
         </li>
         
         <li>
           <p></p>
-          <%= image_tag 'flambadores/25.jpg' %>
+          <%= image_tag 'flambadores/img_1152.JPG' %>
+        </li>
+        
+        <li>
+          <p></p>
+          <%= image_tag 'flambadores/img_1172.JPG' %>
+        </li>
+        
+        <li>
+          <p></p>
+          <%= image_tag 'flambadores/img_1182.JPG' %>
+        </li>
+        
+        <li>
+          <p></p>
+          <%= image_tag 'flambadores/img_1273.JPG' %>
         </li>
                 
+        <li>
+          <p></p>
+          <%= image_tag 'flambadores/img_1309.JPG' %>
+        </li>
+        
+        <li>
+          <p></p>
+          <%= image_tag 'flambadores/img_1315.JPG' %>
+        </li>
       </ul>
     </nav>
     
