--- a/app/views/produto/_jogonumero.html.erb
+++ b/app/views/produto/_jogonumero.html.erb
@@ -17,9 +17,25 @@
     <nav id="nav_produtos">
       <ul id="ul_produtos">
         
+        <%#*<li>%>
+          <%#*<p></p>%>
+          <%#= image_tag 'jogo_numeros/26.jpg', :class => 'ul_produtos img' %>
+        <%#*</li>%>
         <li>
           <p></p>
-          <%= image_tag 'jogo_numeros/26.jpg', :class => 'ul_produtos img' %>
+          <%= image_tag 'jogo_numeros/img_1044.JPG', :class => 'ul_produtos img' %>
+        </li>
+        <li>
+          <p></p>
+          <%= image_tag 'jogo_numeros/img_1045.JPG', :class => 'ul_produtos img' %>
+        </li>
+        <li>
+          <p></p>
+          <%= image_tag 'jogo_numeros/img_1051.JPG', :class => 'ul_produtos img' %>
+        </li>
+        <li>
+          <p></p>
+          <%= image_tag 'jogo_numeros/img_1078.JPG', :class => 'ul_produtos img' %>
         </li>
            
       </ul>
