--- a/app/views/produto/_marcadores.html.erb
+++ b/app/views/produto/_marcadores.html.erb
@@ -16,10 +16,26 @@
       <ul id="ul_produtos">
         
         <li>
-          <p>Marcador</p>
           <%= image_tag 'marcadores/7.jpg' %>
         </li>
-                
+        <li>
+          <%= image_tag 'marcadores/img_1580.JPG' %>
+        </li>
+        <li>
+          <%= image_tag 'marcadores/img_1587.JPG' %>
+        </li>
+        <li>
+          <%= image_tag 'marcadores/img_1594.JPG' %>
+        </li>
+        <li>
+          <%= image_tag 'marcadores/img_1655.JPG' %>
+        </li>
+        <li>
+          <%= image_tag 'marcadores/img_1677.JPG' %>
+        </li>
+        <li>
+          <%= image_tag 'marcadores/img_1694.JPG' %>
+        </li>
       </ul>
     </nav>
 
