--- a/app/views/produto/_mochadores.html.erb
+++ b/app/views/produto/_mochadores.html.erb
@@ -17,19 +17,24 @@
     <nav id="nav_produtos">
       <ul id="ul_produtos">
         
-        <li>
-          <p>Mochador Martelo Simples</p>
-          <%= image_tag 'mochadores/4.jpg', :id => 'mochador01' %>
-        </li>
-        
-        <li>
-          <p>Mochador Reto-Concavo</p>
+        <li>         
           <%= image_tag 'mochadores/6.jpg', :id => 'mochador02' %>
         </li>
         
         <li>
-          <p>Mochador Especial Cabo Duplo</p>
           <%= image_tag 'mochadores/23.jpg', :id => 'mochador03' %>
+        </li>
+        
+        <li>
+          <%= image_tag 'mochadores/img_0885.JPG', :id => 'mochador04' %>
+        </li>
+        
+        <li>
+          <%= image_tag 'mochadores/img_0947.JPG', :id => 'mochador05' %>
+        </li>
+        
+        <li>
+          <%= image_tag 'mochadores/img_0962.JPG', :id => 'mochador06' %>
         </li>
                         
       </ul>
